add SLF4j logging

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>2.5.0</version>
         </dependency>
 
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
