--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
       ddl-auto: update
     show-sql: false
     database-platform: org.hibernate.dialect.MariaDBDialect
+  messages:
+    basename: i18n/messages
+    encoding: UTF-8
 cors:
   allowed-origins:
     - https://our-expenses.duckdns.org
