--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -6,6 +6,7 @@ spring:
 cors:
   allowed-origins:
     - http://localhost:3000
+    - http://192.168.112.1:3000
 servers:
   allowed-servers:
     - http://localhost:8080
@@ -13,3 +14,5 @@ logging:
   level:
     root: INFO
     de.expenses: DEBUG
+server:
+  address: 0.0.0.0
