--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,6 +86,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Liquibase -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
