--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=http://192.168.112.1:8080/api/users
+REACT_APP_API_URL_USERS=http://192.168.112.1:8080/api/users
+REACT_APP_API_URL_GROUPS=http://192.168.112.1:8080/api/groups
+
