--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=https://our-expenses.duckdns.org/api/users
+REACT_APP_API_URL_USERS=https://our-expenses.duckdns.org/api/users
+REACT_APP_API_URL_GROUPS=https://our-expenses.duckdns.org/api/groups
+
