add v1 to api calls, code cleanup, add LocalStorageService.tsx

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,4 @@
-REACT_APP_API_URL_USERS=http://192.168.112.1:8080/api/users
-REACT_APP_API_URL_GROUPS=http://192.168.112.1:8080/api/groups
+REACT_APP_API_URL_USERS=http://192.168.112.1:8080/api/v1/users
+REACT_APP_API_URL_GROUPS=http://192.168.112.1:8080/api/v1/groups
+REACT_APP_API_URL_EXPENSES=http://192.168.112.1:8080/api/v1/expenses
 
