--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,4 @@
-REACT_APP_API_URL_USERS=https://our-expenses.duckdns.org/api/users
-REACT_APP_API_URL_GROUPS=https://our-expenses.duckdns.org/api/groups
+REACT_APP_API_URL_USERS=https://our-expenses.duckdns.org/api/v1/users
+REACT_APP_API_URL_GROUPS=https://our-expenses.duckdns.org/api/v1/groups
+REACT_APP_API_URL_EXPENSES=https://our-expenses.duckdns.org/api/v1/expenses
 
