--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,34 @@ name: Deploy to Server
 on:
   push:
     branches:
-      - main
+      - develop  # oder develop
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.9.0
+      - name: Copy files via SSH
+        uses: appleboy/scp-action@v0.1.7
         with:
-          ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 2222
+          source: "."
+          target: "/home/github/app"
 
-      - name: Copy files to server
-        run: |
-          rsync -avz -e "ssh -p 2222" ./ github@ghost75.duckdns.org:/home/github/app/
-
-#      - name: Run docker-compose on server
-#        run: |
-#          ssh -p 2222 github@ghost75.duckdns.org << 'EOF'
-#            cd /home/github/app
-#            docker-compose pull
-#            docker-compose up -d --build
-#          EOF
+      - name: SSH & Deploy
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 2222
+          script: |
+            cd /home/github/app
+            docker-compose pull
+            docker-compose up -d --build
