--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to Server
+name: Build and Deploy Fullstack App
 
 on:
   push:
     branches:
-      - develop  # oder develop
+      - develop
 
 jobs:
   deploy:
@@ -13,18 +13,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Copy files via SSH
+      - name: Build frontend
+        working-directory: ./frontend
+        run: |
+          npm install --legacy-peer-deps
+          npm run build
+
+      - name: Package backend
+        working-directory: ./backend
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - run: mvn clean package -DskipTests
+        working-directory: ./backend
+
+      - name: Upload app files to server
         uses: appleboy/scp-action@v0.1.7
         with:
-          debug: true
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          source: "."
-          target: "/home/github/app"
+          source: |
+            backend/
+            frontend/build/
+            docker-compose.yml
+          target: /home/github/app
 
-      - name: SSH & Deploy
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -33,5 +50,6 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             cd /home/github/app
-            docker-compose pull
-            docker-compose up -d --build
+            docker-compose down
+            docker-compose build
+            docker-compose up -d
