--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build frontend
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build
         working-directory: ./frontend
 
