--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "i18next": "^25.2.1",
@@ -16,7 +18,7 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   }
 }
