--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,10 @@ jobs:
         run: mvn clean package -DskipTests
         working-directory: ./backend
 
+      # Test server availability
+      - name: Test DNS resolution
+        run: nslookup ${{ secrets.SERVER_HOST }}
+  
       # Copy all files to server via SCP
       - name: Copy project to server
         uses: appleboy/scp-action@v0.1.7
