--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,15 +24,12 @@ jobs:
       # Build and push frontend image
       - name: Build and push frontend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/${
-            { github.repository }}-frontend:latest ./frontend
-          docker push ghcr.io/${{ github.repository_owner }}/${
-            { github.repository }}-frontend:latest
+          docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-frontend:latest ./frontend
+          docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-frontend:latest
 
       # Build and push backend image
       - name: Build and push backend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/${
-            { github.repository }}-backend:latest ./backend
-          docker push ghcr.io/${{ github.repository_owner }}/${
-            { github.repository }}-backend:latest
+          docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-backend:latest ./backend
+          docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-backend:latest
+
