--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,15 @@ jobs:
       # Build and push frontend image
       - name: Build and push frontend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner | toLowerCase }}/${{ github.repository | toLowerCase }}-frontend:latest ./frontend
-          docker push ghcr.io/${{ github.repository_owner | toLowerCase }}/${{ github.repository | toLowerCase }}-frontend:latest
+          OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$OWNER_LOWER/$REPO_LOWER-frontend:latest ./frontend
+          docker push ghcr.io/$OWNER_LOWER/$REPO_LOWER-frontend:latest
 
       # Build and push backend image
       - name: Build and push backend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner | toLowerCase }}/${{ github.repository | toLowerCase }}-backend:latest ./backend
-          docker push ghcr.io/${{ github.repository_owner | toLowerCase }}/${{ github.repository | toLowerCase }}-backend:latest
-
+          OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$OWNER_LOWER/$REPO_LOWER-backend:latest ./backend
+          docker push ghcr.io/$OWNER_LOWER/$REPO_LOWER-backend:latest
