--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,15 +24,14 @@ jobs:
       # Build and push frontend image
       - name: Build and push frontend image
         run: |
-          OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+        
           REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$OWNER_LOWER/$REPO_LOWER-frontend:latest ./frontend
-          docker push ghcr.io/$OWNER_LOWER/$REPO_LOWER-frontend:latest
+          docker build -t ghcr.io/$REPO_LOWER-frontend:latest ./frontend
+          docker push ghcr.io/$REPO_LOWER-frontend:latest
 
       # Build and push backend image
       - name: Build and push backend image
         run: |
-          OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$OWNER_LOWER/$REPO_LOWER-backend:latest ./backend
-          docker push ghcr.io/$OWNER_LOWER/$REPO_LOWER-backend:latest
+          docker build -t ghcr.io/$REPO_LOWER-backend:latest ./backend
+          docker push ghcr.io/$REPO_LOWER-backend:latest
