--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Build and push frontend image
         run: |
         
-          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$REPO_LOWER-frontend:latest ./frontend
-          docker push ghcr.io/$REPO_LOWER-frontend:latest
+          REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_LOWER/expenses-frontend:latest ./frontend
+          docker push ghcr.io/$REPO_LOWER/expenses-frontend:latest
 
       # Build and push backend image
       - name: Build and push backend image
         run: |
-          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$REPO_LOWER-backend:latest ./backend
-          docker push ghcr.io/$REPO_LOWER-backend:latest
+          REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_LOWER/expenses-backend:latest ./backend
+          docker push ghcr.io/$REPO_LOWER/expenses-backend:latest
