--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mariadb://mariadb:3306/expensesdb
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: password
+    env_file:
+      - ./backend/.env.production
     depends_on:
       - mariadb
 
