--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.6.3",
     "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
