--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok.version>1.18.32</lombok.version>
         <lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
+        <commons.lang3.version>3.18.0</commons.lang3.version>
     </properties>
 
     <parent>
@@ -90,6 +91,13 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
         </dependency>
 
         <!-- Testing -->
