--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -23,10 +23,7 @@ servers:
 
 springdoc:
   swagger-ui:
-    path: /swagger-ui.html
-    try-it-out-enabled: true
-    display-request-duration: true
-    doc-expansion: none
+    enabled: false
   api-docs:
     path: /v3/api-docs
   default-produces-media-type: application/json
