--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.13.1",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
@@ -50,7 +51,10 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
   }
 }
