add creation date to group

--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -22,6 +22,7 @@ server:
 
 springdoc:
   swagger-ui:
+    enabled: true
     path: /swagger-ui.html
     try-it-out-enabled: true
     display-request-duration: true
