--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,8 @@
         <lombok.version>1.18.32</lombok.version>
         <lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
         <commons.lang3.version>3.18.0</commons.lang3.version>
+        <mockito.version>5.18.0</mockito.version>
+        <junit.version>5.11.0</junit.version>
     </properties>
 
     <parent>
@@ -107,6 +109,23 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <!-- Dev Tools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -145,6 +164,11 @@
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
             </plugin>
         </plugins>
     </build>
