--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3308/expensesdb
-    username: root
-    password: password
+    username:
+    password:
   jpa:
     hibernate:
       ddl-auto: validate
