update errorhandling, remove db-url, fix styling

--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -1,4 +1,8 @@
 spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3308/expensesdb
+    username: root
+    password: password
   devtools:
     restart:
       enabled: true
