--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
         run: |
         
           REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_LOWER/expenses-frontend:1.0.0 ./frontend
+          docker push ghcr.io/$REPO_LOWER/expenses-frontend:1.0.0
+          
           docker build -t ghcr.io/$REPO_LOWER/expenses-frontend:latest ./frontend
           docker push ghcr.io/$REPO_LOWER/expenses-frontend:latest
 
@@ -33,5 +36,8 @@ jobs:
       - name: Build and push backend image
         run: |
           REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_LOWER/expenses-backend:1.0.0 ./backend
+          docker push ghcr.io/$REPO_LOWER/expenses-backend:1.0.0
+          
           docker build -t ghcr.io/$REPO_LOWER/expenses-backend:latest ./backend
           docker push ghcr.io/$REPO_LOWER/expenses-backend:latest
